--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "cherif/slim-from-scratch",
+    "name": "mafio/slim-from-scratch",
     "autoload": {
         "psr-4": {
-            "Mafio\\SlimFromScratch\\": "src/"
+            "Mafio\\Slim\\": "src/"
         }
     },
     "authors": [
@@ -15,6 +15,10 @@
         "php": "^8.0",
         "slim/slim": "4.*",
         "laminas/laminas-diactoros": "^3.3"
+    }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-latest"
     },
     "scripts": {
         "server": "php -S localhost:8000 -t public"
