--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,39 @@
-version: "3.8"
+version: '3.8'
 
 services:
   php:
     container_name: slim_php
+    restart: always
     build:
       context: ./docker/php
     ports:
-      - '9000:9000'
+      - 9000:9000
     volumes:
       - .:/var/www/slim_app
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - 'host.docker.internal:host-gateway'
+    networks:
+      mf-net:
+
 
   nginx:
     container_name: slim_nginx
     image: nginx:stable-alpine
+    restart: always
     ports:
-      - '${WEB_PORT:-8080}:80'
+      - ${WEB_PORT:-8080}:80
     volumes:
       - .:/var/www/slim_app
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
+    networks:
+      mf-net:
 
   database:
     container_name: slim_mysql
     ports:
-      - "${DATABASE_PORT_LOCAL:-3308}:3306"
+      - ${DATABASE_PORT_LOCAL:-3308}:3306
     image: mysql:8.0.27
     restart: always
     environment:
@@ -36,4 +43,9 @@ services:
       MYSQL_DATABASE: ${DATABASE_NAME}
     cap_add:
       - SYS_NICE
+    networks:
+      mf-net:
 
+networks:
+  mf-net:
+    external: true
